# r6-calendar

./: .dockerignore  Dockerfile  Dockerfile.development  LICENSE  README.md  crontab  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
cron/: r6_calendar_cron  r6_calendar_cron.example
src/: .env.example  .gitignore  main.py  match.py  pyproject.toml  requirements.txt
