[tool.poetry]
name = "r6-calendar"
version = "0.1.0"
description = ""
authors = ["dicyroll"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-core = "^2.11.1"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.97.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
oauth2client = "^4.1.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
